# BotNet

./: CMakeLists.txt  README.md
debug/: infected  server
src/: Readme.md  controller.cpp  infected.cpp  server.cpp
